Attempting to fix the disclaimer

--- a/layouts/shortcodes/category-disclaimer.html
+++ b/layouts/shortcodes/category-disclaimer.html
@@ -1,3 +1,4 @@
+<p>Test shortcode</p>
 {{ with .Page.Params.category }}
 {{ with $.Site.GetPage "section" . }}{{ .Params.description }}{{ end }}
 {{ end }}
